WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72625
[WK2] Fix TransformOperation serialization
https://bugs.webkit.org/show_bug.cgi?id=72625
Summary
[WK2] Fix TransformOperation serialization
Igor Trindade Oliveira
Reported
2011-11-17 09:49:03 PST
TransformOperation subclasses are being serialized using SimpleArgumentCoder. However, SimpleArgumentCoder uses memcpy to decode the data, so the objects serialized by it needs to be a POD(Plain Old Data) type and TransformOperation subclasses are not because the base class has pure virtual methods.
Attachments
Patch
(17.54 KB, patch)
2011-11-17 10:05 PST
,
Igor Trindade Oliveira
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Igor Trindade Oliveira
Comment 1
2011-11-17 10:05:46 PST
Created
attachment 115612
[details]
Patch Proposed patch.
WebKit Review Bot
Comment 2
2011-11-17 14:49:44 PST
Comment on
attachment 115612
[details]
Patch Clearing flags on attachment: 115612 Committed
r100680
: <
http://trac.webkit.org/changeset/100680
>
WebKit Review Bot
Comment 3
2011-11-17 14:49:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug