[WK2] Fix TransformOperation serialization https://bugs.webkit.org/show_bug.cgi?id=72625

SimpleArgumentCoder can encode and decode just POD types. And according the
ISO/IEC 14882, POD types does not have virtual methods, however TransformOperation
has pure virtual methods.

This patch fixes TransformOperation subclass serialization.

Reviewed by Noam Rosenthal.

* Shared/WebCoreArgumentCoders.cpp:
(CoreIPC::::encode):
(CoreIPC::::decode):
(CoreIPC::encodeOperation):
(CoreIPC::decodeOperation):
* Shared/WebCoreArgumentCoders.h:


Canonical link: https://commits.webkit.org/89181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100680 268f45cc-cd09-0410-ab3c-d52691b4dbfc